# turboclaude

./: .gitignore  CHANGELOG.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md
crates/turboclaude/: Cargo.toml  README.md
crates/turboclaude-core/: Cargo.toml  README.md
crates/turboclaude-core/examples/: error_example.rs  resource_example.rs  retry_example.rs  serde_example.rs
crates/turboclaude-core/src/: lib.rs  resource.rs
crates/turboclaude-core/src/error/: boundary.rs  mod.rs
crates/turboclaude-core/src/retry/: exponential.rs  mod.rs  strategy.rs
crates/turboclaude-core/src/serde/: mod.rs  pipeline.rs
crates/turboclaude-integration-tests/: Cargo.toml  README.md
crates/turboclaude-integration-tests/src/: lib.rs
crates/turboclaude-mcp/: Cargo.toml  README.md
crates/turboclaude-mcp/src/: bridge.rs  error.rs  factory.rs  lib.rs  registry.rs  trait_.rs
crates/turboclaude-mcp/src/adapters/: mod.rs  official_sdk.rs  turbomcp.rs
crates/turboclaude-mcp/tests/: bridge_integration.rs  cross_sdk_integration.rs  integration_trait.rs
crates/turboclaude-protocol/: Cargo.toml  README.md
crates/turboclaude-protocol/src/: agent.rs  content.rs  error.rs  hooks.rs  lib.rs  message.rs  permissions.rs  protocol.rs  types.rs
crates/turboclaude-skills/: Cargo.toml  README.md
crates/turboclaude-skills/examples/: basic.rs
crates/turboclaude-skills/skills/: README.md
crates/turboclaude-skills/skills/git-helper/: SKILL.md
crates/turboclaude-skills/skills/git-helper/reference/: branch-strategies.md  commit-conventions.md
crates/turboclaude-skills/skills/git-helper/scripts/: analyze_branches.py
crates/turboclaude-skills/src/: error.rs  executor.rs  lib.rs  matcher.rs  parser.rs  registry.rs  skill.rs  validation.rs
crates/turboclaude-skills/tests/: executor_timeout_test.rs  integration_test.rs
crates/turboclaude-skills/tests/fixtures/skills/full-skill/: test_script.sh
crates/turboclaude-transport/: Cargo.toml  README.md
crates/turboclaude-transport/src/: error.rs  lib.rs  traits.rs
crates/turboclaude-transport/src/http/: client.rs  mod.rs  retry.rs
crates/turboclaude-transport/src/subprocess/: cli.rs  mod.rs  process.rs
crates/turboclaude-transport/tests/: http_transport_test.rs
crates/turboclaude/benches/: message_performance.rs
crates/turboclaude/examples/: basic.rs.skip  bedrock_basic.rs  bedrock_streaming.rs  beta_batches.rs  beta_models.rs  beta_skills.rs  clear_thinking.rs  context_management.rs  document_analysis.rs.skip  mcp_basic.rs  prompt_caching.rs.skip  response_headers.rs.skip  streaming.rs  streaming.rs.skip  structured_outputs.rs  tool_runner.rs.skip  tools.rs  tools.rs.skip  vertex_basic.rs  vertex_streaming.rs
crates/turboclaude/src/: client.rs  config.rs  context.rs  error.rs  lib.rs  observability.rs  property_tests.rs  schema.rs  streaming.rs  streaming_validation.rs  validation.rs
crates/turboclaude/src/http/: anthropic_provider.rs  middleware.rs  mod.rs  provider.rs  request.rs  response.rs
crates/turboclaude/src/providers/: mod.rs
crates/turboclaude/src/providers/bedrock/: error.rs  http.rs  mod.rs  translate.rs
crates/turboclaude/src/providers/shared/: content_blocks.rs  http_helpers.rs  mod.rs  system_prompt.rs
crates/turboclaude/src/providers/vertex/: client.rs  error.rs  http.rs  mod.rs
crates/turboclaude/src/resources/: completions.rs  messages.rs  mod.rs  models.rs
crates/turboclaude/src/resources/beta/: files.rs  mod.rs  models.rs  skills.rs
crates/turboclaude/src/tools/: builtin.rs  function.rs  mod.rs  runner.rs  traits.rs
crates/turboclaude/src/types/: content.rs  message.rs  mod.rs  model.rs  tool.rs  usage.rs
crates/turboclaude/src/types/beta/: citations.rs  context_management.rs  files.rs  memory.rs  mod.rs  models.rs  parsed.rs  skills.rs  thinking.rs  tools.rs
crates/turboclaude/tests/: dogfooding_context_management.rs  integration_bedrock.rs  integration_http_providers.rs  integration_messages_with_wiremock.rs  integration_validation.rs  integration_vertex.rs  real_world.rs  test_beta_models.rs  test_citations.rs  test_client.rs  test_types.rs
crates/turboclaude/tests/common/: mod.rs
crates/turboclaude/tests/fixtures/responses/: message_success.json  message_with_tool_use.json
crates/turboclaude/tests/real_world/: README.md  batches.rs.draft  caching.rs.draft  common.rs  errors.rs  messages.rs  streaming.rs  tools.rs.draft
crates/turboclaude/tests/snapshots/: test_types__message_request_snapshot.snap  test_types__message_snapshot.snap
crates/turboclaudeagent/: Cargo.toml  README.md
crates/turboclaudeagent/benches/: query_latency.rs
crates/turboclaudeagent/examples/: advanced_agent_integration.rs  builder_pattern.rs  error_handling.rs  error_recovery.rs  message_filtering.rs  message_filtering.rs.skip  plugin_composition.rs  plugin_system.rs  reconnection.rs  research_assistant.rs  sdk_mcp_tools.rs  session_lifecycle.rs  simple_query.rs  with_hooks.rs  with_permissions.rs  with_skills.rs
crates/turboclaudeagent/src/: agent.rs  client.rs  config.rs  error.rs  hooks.rs  lib.rs  lifecycle.rs  message_parser.rs  permissions.rs  plugin_resolver.rs  plugins.rs  retry.rs  routing.rs  skills.rs  testing.rs
crates/turboclaudeagent/src/mcp/: mod.rs  sdk.rs
crates/turboclaudeagent/src/session/: control.rs  core.rs  mod.rs  query.rs  state.rs
crates/turboclaudeagent/tests/: e2e_agents_and_settings.rs  e2e_dynamic_control.rs  e2e_hooks.rs  e2e_partial_messages.rs  e2e_sdk_mcp_tools.rs  e2e_stderr_callback.rs  e2e_tool_permissions.rs  integration_control.rs  integration_errors.rs  integration_hook_callbacks.rs.skip  integration_permission_callbacks.rs  integration_permissions.rs  integration_query.rs  integration_sdk_mcp.rs  integration_streaming.rs  test_fork.rs  test_message_filtering.rs.skip
crates/turboclaudeagent/tests/common/: mock_transport.rs  mod.rs
crates/turboclaudeagent/tests/e2e/: README.md  common.rs  mod.rs
examples/: basic.rs  document_analysis.rs  prompt_caching.rs  response_headers.rs  skills_demo.rs  streaming.rs  tool_runner.rs  tools.rs
src/: client.rs  (+4 more)
(+50 files in other folders)
