[workspace]
members = [
    "crates/turboclaude",
    "crates/turboclaude-protocol",
    "crates/turboclaude-transport",
    "crates/turboclaudeagent",
    "crates/turboclaude-integration-tests",
    "crates/turboclaude-mcp",
    "crates/turboclaude-skills",
    "crates/turboclaude-core",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["epistates"]
license = "MIT"
repository = "https://github.com/epistates/turboclaude"

# Workspace-level dependencies for consistency
[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"
thiserror = "2.0.17"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"

# Dev dependencies
rstest = "0.23"
wiremock = "0.6"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
mockall = "0.13"
tempfile = "3.14"
temp-env = "0.3"  # Safe environment variable management for tests (Rust 2024 compliant)

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2
