[package]
name = "turboclaude-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Skills support for TurboClaude - modular capability packages for Claude agents"
repository.workspace = true
documentation = "https://docs.rs/turboclaude-skills"
keywords = ["claude", "anthropic", "ai", "skills", "agents"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Core turboclaude
turboclaude-protocol = { path = "../turboclaude-protocol", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["fs", "process", "time", "sync", "rt", "rt-multi-thread", "macros", "io-util"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Filesystem
walkdir = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
once_cell = "1"
regex = "1"

# Logging
tracing = "0.1"

# Optional dependencies
# Note: turboclaudeagent removed to avoid circular dependency
# Agent integration is handled in turboclaudeagent itself

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
# Note: agent-integration removed - now handled in turboclaudeagent crate
embeddings = []  # Future: semantic matching with embeddings

[[example]]
name = "basic"
path = "examples/basic.rs"
