[package]
name = "turboclaude-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic transport abstraction layer for TurboClaude"
repository.workspace = true
documentation = "https://docs.rs/turboclaude-transport"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

turboclaude-protocol = { version = "0.2.0", path = "../turboclaude-protocol" }
turboclaude-core = { version = "0.2.0", path = "../turboclaude-core" }

# HTTP transport dependencies
reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls", "multipart"] }
eventsource-stream = "0.2"
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace"] }
http = "1.1"
url = "2.5"
bytes = "1.8"
governor = "0.7"

# Subprocess transport dependencies
nix = { version = "0.28", features = ["process"] }

[dev-dependencies]
rstest = { workspace = true }
wiremock = { workspace = true }
tokio-test = { workspace = true }
