[package]
name = "turboclaudeagent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive Agent SDK for TurboClaude - Use Claude agents in your Rust applications"
repository.workspace = true
documentation = "https://docs.rs/turboclaudeagent"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

turboclaude-protocol = { version = "0.1.0", path = "../turboclaude-protocol" }
turboclaude-transport = { version = "0.1.0", path = "../turboclaude-transport" }
turboclaude-skills = { version = "0.1.0", path = "../turboclaude-skills", optional = true }

# For subprocess management
nix = { version = "0.28", features = ["process"] }

[dev-dependencies]
rstest = { workspace = true }
wiremock = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "query_latency"
harness = false

[features]
default = []
skills = ["turboclaude-skills"]
full = ["skills"]
